samples/_failures_safe/1761274466_714197_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8ea1ec5.c: In function ‘main’:
./samples/SAFE/__tmp_c8ea1ec5.c:146:5: error: expected declaration or statement at end of input
  146 |     }
      |     ^
